syntax = "proto3";

option go_package = "github.com/simonhammes/301-cloud-computing-project/grpc/search";

// Package name
// TODO
// package api;

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 results_per_page = 3;
}

message SearchResponse {
  int32 number_of_results = 1;
}

message PrimeGenerationRequest {
  int32 limit = 1;
}

message PrimeResponse {
  int32 prime = 1;
}

message LogMessage {
  // TODO: DateTime
  string message = 1;
}

message LogSummary {
  int32 count = 1;
}

// TODO: Rename service
service SearchService {
  // Unary
  rpc Search(SearchRequest) returns (SearchResponse);
  // Server-side streaming
  rpc GeneratePrimes(PrimeGenerationRequest) returns (stream PrimeResponse);
  // Client-side streaming
  rpc RecordLogMessages(stream LogMessage) returns (LogSummary);
  // Bidirectional streaming
  rpc LogChat(stream LogMessage) returns (stream LogMessage);
}
